--- a/GastosExcel/InterfaceGastos/pom.xml
+++ b/GastosExcel/InterfaceGastos/pom.xml
@@ -38,7 +38,12 @@
 			<systemPath>D:/ojdbc8.jar</systemPath>
 		</dependency>
 		
-
+		
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.2</version>
+		</dependency>
 	
 		
 		<dependency>
@@ -63,6 +68,12 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>2.2.14</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+   			<artifactId>jstl</artifactId>
+    		<version>1.2</version>
 		</dependency>
 	</dependencies>
 			
